# checkers_parser

./: .gitignore  README.md  pyproject.toml  requirements.txt
checkers_parser/: manage.py
checkers_parser/checkers_parser/: asgi.py  settings.py  urls.py  wsgi.py
checkers_parser/main/: admin.py  downloader.py  models.py  repositories.py  services.py  test_data.py  urls.py  views.py
checkers_parser/main/migrations/: 0001_initial.py
checkers_parser/main/templates/: bandit.html  base.html  dashboard.html  project.html  radon_cc.html  radon_mi.html  ruff.html
deploy/: Dockerfile  docker-compose.yml  entrypoint.sh
